--- a/project/part5/products/fusion.html
+++ b/project/part5/products/fusion.html
@@ -234,7 +234,11 @@ background-color: #00cc44;
         <li><a href="contacts.html">Contact Sales</a></li>
     </ul>
 </nav>
-
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>License Type Administrator</h4></span>
+        <hr>
+    </div>
 
 	<!-- THIRD FEATURES SECTION -->
 	<!-- GRID DATA SECTION -->
