--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -205,9 +205,14 @@ background-color: #00cc44;
 
 <nav>
     <ul class="menu">
-        <li><a href="licenses6.html">Products</a></li>
-
         <li class="dropdown">
+		  <a href="licenses6.html">Products ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="./products/fusion.html">Current Fusion Releases</a></li>
+            </ul>
+		</li>
+		
+		<li class="dropdown">
             <a href="./deployments/deployments.html">Deployment ▾</a>
             <ul class="dropdown-content">
                 <li><a href="./deployments/deployments.html">Deployment Options</a></li>
