--- a/project/part5/userhelp.html
+++ b/project/part5/userhelp.html
@@ -151,9 +151,9 @@
             <ol>
                 <li>wiki.greenvilleassociates.com - Standard Top Questions & Answers</li>
                 <li>support.greenvilleassociates.com - Community Support Forums</li>
-                <li>suitecrm.greenvilleassociates.com - Open a Ticket For Your Maintenance Contract With Our Support Engineers for Premium Support</li>
+                <li>suitecrm.greenvilleassociates.com - Open a Maintenance Ticket On Your Contract With Support Engineers</li>
                 <li>support@greenvilleassociates.com - Email Us For Best Effort Support within 72 Hours</li>
-                <li>momentum.greenvilleassociates.com - Search Our Momentum Magazine For More Installation and Maintenance WhitePapers and Publications</li>
+                <li>momentum.greenvilleassociates.com - Search pMomentum Magazine For WhitePapers and Publications</li>
             </ol>
         </p>
     </div>
