--- a/project/part5/userhelp.html
+++ b/project/part5/userhelp.html
@@ -139,9 +139,9 @@
     </ul>
 </nav>
 <div class="pageheader">
-        <hr>
-        <span align="center"><h4>Enterprise Help</h4></span>
-        <hr>
+        <hr color="lightgreen">
+        <span align="center"><h4 style="color: white;">Enterprise Help</h4></span>
+        <hr color="lightgreen">
     </div>
     <div class="help-container">
        
