--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
             <h5>Amended DesignSpecs Final</h5>
             <h6>Design Document3.0</h6>
         </div>
+			<div class="task-item">
+            <h4>Assignment14</h4>
+            <a href="./assignments/11-classes/index.html"><img src="./images/musicpage.png" alt="Assignment13"></a>
+            <h5>Javacscript Classes</h5>
+            <h6>Music Playlist Class - Assignment 13</h6>
+        </div>
     </div>
 </section>
 
