--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -20,7 +20,7 @@
 
     <!-- NAV BAR -->
     <div class="w3-bar w3-blue">
-        <a href="musicplayer.html" class="w3-bar-item w3-button w3-white">Home</a>
+        <a href="index.html" class="w3-bar-item w3-button w3-white">Home</a>
         <a href="genres.html" class="w3-bar-item w3-button">Browse by Genre</a>
     </div>
 
