--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
             <h4>Assignment15</h4>
             <a href="https://api242.onrender.com"><img src="./images/greenswagger.png" alt="Assignment14"></a>
             <h5>Updated Links For Render Backoffice</h5>
-            <h6><a href="https://api242.onrender.com">RenderPage</a></h6>
-			<h6><a href="https://github.com/jssg33/api242">RenderPage</a></h6>		
+            <h6><a href="https://api242.onrender.com">LiveDemo(admin: spirit)</a></h6>
+			<h6><a href="https://github.com/jssg33/api242">CodeRepo</a></h6>		
         </div>    
 	</div>
 </section>
