--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/site.css">
+    <link rel="stylesheet" href="./css/greenville.css">
     <style>
         body { font-family: "Roboto", sans-serif; }
         .song-card { width: 250px; margin: 15px; cursor: pointer; }
