--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
 		<div class="task-item">
             <h4>Assignment11</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/11-javascript-classes/index.html"><img src="./images/TBD.png" alt="Assignment11"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/11-javascript-classes/index.html"><img src="./images/musicpage.png" alt="Assignment11"></a>
             <h5>Javascript Classes</h5>
             <h6>Simple Javascript Class Exercises</h6>
         </div>
@@ -157,14 +157,9 @@
             <h5>Amended DesignSpecs Final</h5>
             <h6>Design Document3.0</h6>
         </div>
-			<div class="task-item">
+	
+		<div class="task-item">
             <h4>Assignment14</h4>
-            <a href="./assignments/11-classes/index.html"><img src="./images/musicpage.png" alt="Assignment13"></a>
-            <h5>Javacscript Classes</h5>
-            <h6>Music Playlist Class - Assignment 13</h6>
-        </div>
-				<div class="task-item">
-            <h4>Assignment15</h4>
             <a href="https://api242.onrender.com"><img src="./images/greenswagger.png" alt="Assignment14"></a>
             <h5>Updated Links For Render Backoffice</h5>
             <h6><a href="https://api242.onrender.com">LiveDemo(admin: spirit)</a></h6>
