--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 	
 		<div class="task-item">
             <h4>Assignment14</h4>
-            <a href="https://api242.onrender.com"><img src="./images/greenswagger.PNG" alt="Assignment14"></a>
+            <a href="https://api242.onrender.com"><img src="./images/greenswagger.PNG" width="100px" height="100px" alt="Assignment14"></a>
             <h5>Updated Links For Render Backoffice</h5>
             <h6><a href="https://api242.onrender.com">LiveDemo(admin: spirit)</a></h6>
 			<h6><a href="https://github.com/jssg33/api242">CodeRepo</a></h6>		
