--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
         </div>
 	
 		<div class="task-item">
-            <h4>Assignment14</h4>
+            <h4>Assignment14A</h4>
             <a href="https://api242.onrender.com/swagger/"><img src="./images/greenswagger.PNG" width="100px" height="100px" alt="Assignment14"></a>
             <h5>Updated Links For Render Backoffice</h5>
             <h6><a href="https://api242.onrender.com/swagger/">LiveDemo(admin: spirit)</a></h6>
 			<h6><a href="https://github.com/jssg33/api242">CodeRepo</a></h6>		
         </div>    
 			<div class="task-item">
-            <h4>Assignment15</h4>
-            <a href="https://github.com/jssg33/api24"><img src="./images/greenswagger.PNG" alt="Assignment14B"></a>
+            <h4>Assignment14B</h4>
+            <a href="https://github.com/jssg33/api242"><img src="./images/greenswagger.PNG" alt="Assignment14B"></a>
             <h5><a href="https://github.com/jssg33/api242">GitHubRepoForAPI</a></h5>		
         </div>  
 	</div>
