--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="project-item">
             <h4>Project Task10</h4>
             <a href="https://jssg33.github.io/usc242/project/part5/index.html"><img src="./images/homepage.png" alt="HTML Complete"></a>
-            <h5>HTML Site Complate</h5>
+            <h5>HTML Site Complete</h5>
             <h6>HTML Final Pages</h6>
         </div>
         <div class="project-item">
