--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>    
 			<div class="task-item">
             <h4>Assignment14B</h4>
-            <a href="https://github.com/jssg33/api242"><img src="./images/greenswagger.PNG" alt="Assignment14B"></a>
+            <a href="https://github.com/jssg33/api242"><img src="./images/api242.PNG" alt="Assignment14B"></a>
             <h5><a href="https://github.com/jssg33/api242">GitHubRepoForAPI</a></h5>		
         </div>  
 	</div>
