--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
 			<div class="task-item">
             <h4>Assignment14B</h4>
             <a href="https://github.com/jssg33/api242"><img src="./images/api242.png" alt="Assignment14B"></a>
-            <h5><a href="https://github.com/jssg33/api242">GitHubRepoForAPI</a></h5>		
+			<h5>Github Repo For Api </h5>
+            <h6>This is the BackOffice API Only</h6>		
         </div>  
 	</div>
 </section>
