--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h5>Render API Backoffice</h5>
 			<h6>Updated Links For Render Backoffice</h6>
             <span><a href="https://api242.onrender.com/swagger/">LiveDemo(admin: spirit)</a></span><br>
-			</span><a href="https://github.com/jssg33/api242">CodeRepo</a></span><br>		
+			<span><a href="https://github.com/jssg33/api242">CodeRepo</a></span><br>		
         </div>    
 			<div class="task-item">
             <h4>Assignment14B</h4>
