--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
             <h5>React UI - AI Build</h5>
             <h6>React LicenseManager Homepage Built By Figma w/ClaudeAI</h6>
         </div>
+		<div class="project-item">
+            <h4>Project Task3C</h4>
+            <a href="https://greenprojectmanager.onrender.com/"><img src="./images/ClaudeAI.png" alt="ProjectPM"></a>
+            <h5>React UI - GreenProjectManager</h5>
+            <h6>React ProjectManager Homepage Built By Figma w/ClaudeAI</h6>
+        </div>
         <div class="project-item">
             <h4>Project Task4</h4>
             <a href="https://jssg33.github.io/usc242/project/wireframe/Wireframe.pdf"><img src="https://jssg33.github.io/usc242/project/wireframe/images/FigmaHome.png" alt="FigmaPDF"></a>
