--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
 		<div class="project-item">
             <h4>Project Task3C</h4>
-            <a href="https://greenprojectmanager.onrender.com/"><img src="./images/ClaudeAI.png" alt="ProjectPM"></a>
+            <a href="https://greenprojectmanager.onrender.com/"><img src="./images/greenprojectmanager.jpg" alt="ProjectPM"></a>
             <h5>React UI - GreenProjectManager</h5>
             <h6>React ProjectManager Homepage Built By Figma w/ClaudeAI</h6>
         </div>
