--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </div>
         <div class="project-item">
             <h4>Project Task3A</h4>
-            <a href="https://react242-ho2o.onrender.com/"><img src="./images/FusionLicenseManager.jpeg" alt="Project3Areactui"></a>
+            <a href="https://react242-ho2o.onrender.com/"><img src="./images/greenlicensemanager.png" alt="Project3Areactui"></a>
             <h5>React UI Update</h5>
             <h6>React LicenseManager Homepage</h6>
         </div>
