--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
+<!--
+    Assignment 11
+    Mobile Layout from Portias FlexBox Assignment
+-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+    <head>
     <title>Music Player</title>
 
     <!-- W3CSS Stylesheet -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="./css/layout.css">
-    <link rel="stylesheet" href="./css/site.css">
-    <link rel="stylesheet" href="./css/greenville.css">
+    <link rel="stylesheet" href="./css/a9styles.css"> 
+    <link rel="stylesheet" href="./css/a10styles.css"> 
+    <link rel="stylesheet" href="./css/a11styles.css"> 
+<style>
     <style>
         body { font-family: "Roboto", sans-serif; }
         .song-card { width: 250px; margin: 15px; cursor: pointer; }
