--- a/assignments/11-classes/genres.html
+++ b/assignments/11-classes/genres.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Browse by Genre</title>
+    <title>Browse Music by Genre</title>
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="./css/a9styles.css"> 
+    <link rel="stylesheet" href="./css/a10styles.css"> 
+    <link rel="stylesheet" href="./css/a11styles.css"> 
 
     <style>
         body { font-family: "Roboto", sans-serif; }
