--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="./css/a9styles.css"> 
     <link rel="stylesheet" href="./css/a10styles.css"> 
-    <link rel="stylesheet" href="./css/a11styles.css"> 
+    <link rel="stylesheet" href="./css/a11styles.css">
+    <script src="./js/a11.js" defer></script>
 <style>
     <style>
         body { font-family: "Roboto", sans-serif; }
