--- a/assignments/11-classes/genres.html
+++ b/assignments/11-classes/genres.html
@@ -35,7 +35,7 @@
     <div id="gallery" class="w3-padding"></div>
 
     <script>
-        class Song {
+        /*class Song {
             constructor(title, artist, album, year, genre, cover, youtube) {
                 this.title = title;
                 this.artist = artist;
@@ -95,7 +95,7 @@
             }
         }
 
-        loadJSON();
+        loadJSON();*/
     </script>
 
 </body>
