--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <script>
+    <script>/*
         class Song {
             constructor(title, artist, album, year, genre, cover, youtube) {
                 this.title = title;
@@ -133,7 +133,7 @@
             document.getElementById("songModal").style.display = "block";
         }
 
-        loadJSON();
+        loadJSON();*/
     </script>
 
 </body>
