--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -33,7 +33,7 @@
     <header class="w3-container w3-blue w3-center">
         <h1>My Music Player</h1>
     </header>
-
+    <div class="container2">
     <div id="gallery" class="w3-padding"></div>
 
     <!-- Modal -->
@@ -62,74 +62,10 @@
             </footer>
         </div>
     </div>
-
-    <script>/*
-        class Song {
-            constructor(title, artist, album, year, genre, cover, youtube) {
-                this.title = title;
-                this.artist = artist;
-                this.album = album;
-                this.year = year;
-                this.genre = genre;
-                this.cover = cover;
-                this.youtube = youtube;
-            }
-
-            getCard(index) {
-                return `
-                    <div class="w3-card w3-white song-card" onclick="showSong(${index})">
-                        <img src="images/${this.cover}" class="song-cover">
-                        <div class="w3-container">
-                            <p><b>${this.title}</b></p>
-                            <p>${this.artist}</p>
-                        </div>
-                    </div>
-                `;
-            }
-        }
-
-        let songs = [
-            new Song("Blinding Lights", "The Weeknd", "After Hours", 2020, "Synthwave", "blindinglights.jpg", "4NRXx6U8ABQ"),
-            new Song("Viva La Vida", "Coldplay", "Viva La Vida", 2008, "Alternative Rock", "vivalavida.jpg", "dvgZkm1xWPE"),
-            new Song("Bad Guy", "Billie Eilish", "When We All Fall Asleep", 2019, "Electropop", "badguy.jpg", "DyDfgMOUjCI"),
-            new Song("Believer", "Imagine Dragons", "Evolve", 2017, "Rock", "believer.jpg", "7wtfhZwyrcc")
-        ];
-
-        async function loadJSON() {
-            const response = await fetch("hardrocksongs.json");
-            const data = await response.json();
-
-            data.forEach(s => songs.push(new Song(
-                s.title, s.artist, s.album, s.year, s.genre, s.cover, s.youtube
-            )));
-
-            loadGallery();
-        }
-
-        function loadGallery() {
-            let gallery = document.getElementById("gallery");
-            gallery.innerHTML = "";
-
-            songs.forEach((song, index) => {
-                gallery.innerHTML += song.getCard(index);
-            });
-        }
-
-        function showSong(index) {
-            const s = songs[index];
-
-            document.getElementById("modalTitle").innerText = s.title;
-            document.getElementById("modalArtist").innerText = s.artist;
-            document.getElementById("modalAlbum").innerText = s.album;
-            document.getElementById("modalYear").innerText = s.year;
-            document.getElementById("modalGenre").innerText = s.genre;
-            document.getElementById("modalCover").src = "images/" + s.cover;
-            document.getElementById("modalYoutube").src = "https://www.youtube.com/embed/" + s.youtube;
-
-            document.getElementById("songModal").style.display = "block";
-        }
-
-        loadJSON();*/
+</div>
+    <script src="./js/a11.js"></script>
+    <script>
+        loadJSON(loadHomeGallery);
     </script>
 
 </body>
