--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -58,10 +58,13 @@
             </div>
 
             <footer class="w3-container w3-blue w3-center">
-                <p>Music Player</p>
+                <p id="bottomcredits">&copy 2026 - Cocky Consulting - CircusFrame Music Player</p>
             </footer>
         </div>
     </div>
+    <footer>
+        <p id="bottomcredits">&copy 2026 - Cocky Consulting - CircusFrame Music Player</p>
+    </footer>
 </div>
     <script src="./js/a11.js"></script>
     <script>
