--- a/assignments/11-classes/albums.html
+++ b/assignments/11-classes/albums.html
@@ -68,8 +68,9 @@
     </div>
 
     <script>
-        loadJSON(loadArtistGallery);
+    loadJSON(loadAlbumGallery);
     </script>
+
 
 </body>
 </html>
