--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -28,6 +28,8 @@
     <div class="w3-bar w3-blue">
         <a href="index.html" class="w3-bar-item w3-button w3-white">Home</a>
         <a href="genres.html" class="w3-bar-item w3-button">Browse by Genre</a>
+        <a href="artists.html" class="w3-bar-item w3-button">Browse By Artists</a>
+        <a href="albums.html" class="w3-bar-item w3-button">Browse By Albums</a>
     </div>
 
     <header class="w3-container w3-blue w3-center">
