--- a/assignments/11-classes/genres.html
+++ b/assignments/11-classes/genres.html
@@ -26,6 +26,9 @@
     <div class="w3-bar w3-blue">
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="genres.html" class="w3-bar-item w3-button w3-white">Browse by Genre</a>
+        <a href="artists.html" class="w3-bar-item w3-button">Browse By Artists</a>
+        <a href="albums.html" class="w3-bar-item w3-button">Browse By Albums</a>
+
     </div>
 
     <header class="w3-container w3-blue w3-center">
