--- a/assignments/11-classes/genres.html
+++ b/assignments/11-classes/genres.html
@@ -3,6 +3,8 @@
 <head>
     <title>Browse Music by Genre</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -15,8 +17,9 @@
         body { font-family: "Roboto", sans-serif; }
         .song-card { width: 250px; margin: 15px; cursor: pointer; }
         .song-cover { width: 100%; height: 250px; object-fit: cover; }
-        .genre-title { font-size: 28px; font-weight: bold; margin-left: 20px; margin-top: 40px; }
+        .genre-title { font-size: 28px; font-weight: bold; margin-left: 20px; margin-top: 20px; }
         .genre-row { display: flex; flex-wrap: wrap; margin-left: 20px; }
+        .genre-block { width: 100%; display: block; margin-bottom: 40px; }
     </style>
 </head>
 
@@ -25,10 +28,9 @@
     <!-- NAV BAR -->
     <div class="w3-bar w3-blue">
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
-        <a href="genres.html" class="w3-bar-item w3-button w3-white">Browse by Genre</a>
-        <a href="artists.html" class="w3-bar-item w3-button">Browse By Artists</a>
-        <a href="albums.html" class="w3-bar-item w3-button">Browse By Albums</a>
-
+        <a href="genres.html" class="w3-bar-item w3-button w3-white">Genres</a>
+        <a href="artists.html" class="w3-bar-item w3-button">Artists</a>
+        <a href="albums.html" class="w3-bar-item w3-button">Albums</a>
     </div>
 
     <header class="w3-container w3-blue w3-center">
@@ -36,45 +38,42 @@
     </header>
 
     <div class="container2">
-    <div id="gallery" class="w3-padding"></div>
+        <div id="gallery" class="w3-padding"></div>
     
-    <!-- MODAL PLAYER -->
-    <div id="songModal" class="w3-modal">
-        <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
-            <header class="w3-container w3-blue">
-                <span onclick="document.getElementById('songModal').style.display='none'"
-                      class="w3-button w3-display-topright">&times;</span>
-                <h2 id="modalTitle"></h2>
-            </header>
+        <!-- MODAL PLAYER -->
+        <div id="songModal" class="w3-modal">
+            <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+                <header class="w3-container w3-blue">
+                    <span onclick="closeModal()" class="w3-button w3-display-topright">&times;</span>
+                    <h2 id="modalTitle"></h2>
+                </header>
 
-            <div class="w3-container">
-                <img id="modalCover" style="width:100%;height:300px;object-fit:cover;">
-                <p><b>Artist:</b> <span id="modalArtist"></span></p>
-                <p><b>Album:</b> <span id="modalAlbum"></span></p>
-                <p><b>Year:</b> <span id="modalYear"></span></p>
-                <p><b>Genre:</b> <span id="modalGenre"></span></p>
+                <div class="w3-container">
+                    <img id="modalCover" style="width:100%;height:300px;object-fit:cover;">
+                    <p><b>Artist:</b> <span id="modalArtist"></span></p>
+                    <p><b>Album:</b> <span id="modalAlbum"></span></p>
+                    <p><b>Year:</b> <span id="modalYear"></span></p>
+                    <p><b>Genre:</b> <span id="modalGenre"></span></p>
 
-                <div class="w3-center w3-margin">
-                    <iframe id="modalYoutube" width="100%" height="315" src="" allowfullscreen></iframe>
+                    <div class="w3-center w3-margin">
+                        <iframe id="modalYoutube" width="100%" height="315" src="" allowfullscreen></iframe>
+                    </div>
                 </div>
+
+                <footer class="w3-container w3-blue w3-center">
+                    <p>&copy; 2026 - Cocky Consulting - CircusFrame Music Player</p>
+                </footer>
             </div>
-
-            <footer class="w3-container w3-blue w3-center">
-                <p id="bottomcredits">&copy 2026 - Cocky Consulting - CircusFrame Music Player</p>
-            </footer>
         </div>
-    </div>
-    <footer>
-        <p id="bottomcredits">&copy 2026 - Cocky Consulting - CircusFrame Music Player</p>
-    </footer>
-</div>
 
-<
-    <script src="./js/a11.js"></script>
+        <footer>
+            <p class="bottomcredits">&copy; 2026 - Cocky Consulting - CircusFrame Music Player</p>
+        </footer>
+    </div>
+
     <script>
         loadJSON(loadGenreGallery);
     </script>
 
 </body>
 </html>
-
