--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -24,6 +24,9 @@
 
 <body class="w3-light-grey">
 
+    <header class="w3-container w3-black w3-center">
+        <h1>My Music Player</h1>
+    </header>
     <!-- NAV BAR -->
     <div class="w3-bar w3-blue">
         <a href="index.html" class="w3-bar-item w3-button w3-white">Home</a>
@@ -31,10 +34,7 @@
         <a href="artists.html" class="w3-bar-item w3-button">Browse By Artists</a>
         <a href="albums.html" class="w3-bar-item w3-button">Browse By Albums</a>
     </div>
-
-    <header class="w3-container w3-blue w3-center">
-        <h1>My Music Player</h1>
-    </header>
+    
     <div class="container2">
     <div id="gallery" class="w3-padding"></div>
 
