--- a/assignments/11-classes/genres.html
+++ b/assignments/11-classes/genres.html
@@ -31,7 +31,7 @@
         <h1>Browse by Genre</h1>
     </header>
         <!-- NAV BAR -->
-    <div class="w3-bar w3-blue">
+    <div class="w3-bar w3-black">
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="genres.html" class="w3-bar-item w3-button w3-white">Genres</a>
         <a href="artists.html" class="w3-bar-item w3-button">Artists</a>
