--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -28,7 +28,7 @@
         <h1>My Music Player</h1>
     </header>
     <!-- NAV BAR -->
-    <div class="w3-bar w3-blue">
+    <div class="w3-bar w3-blue" style="text-align: center;" align="center">
         <a href="index.html" class="w3-bar-item w3-button w3-white">Home</a>
         <a href="genres.html" class="w3-bar-item w3-button">Browse by Genre</a>
         <a href="artists.html" class="w3-bar-item w3-button">Browse By Artists</a>
