--- a/assignments/11-classes/artists.html
+++ b/assignments/11-classes/artists.html
@@ -25,11 +25,11 @@
 
 <body class="w3-light-grey">
 
-    <header class="w3-container w3-blue w3-center">
+    <header class="w3-container w3-black w3-center">
         <h1>Browse by Artist</h1>
     </header>
  <!-- NAV BAR -->
-    <div class="w3-bar w3-black">
+    <div class="w3-bar w3-blue">
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="genres.html" class="w3-bar-item w3-button">Genres</a>
         <a href="artists.html" class="w3-bar-item w3-button w3-white">Artists</a>
