--- a/assignments/11-classes/artists.html
+++ b/assignments/11-classes/artists.html
@@ -29,7 +29,7 @@
         <h1>Browse by Artist</h1>
     </header>
  <!-- NAV BAR -->
-    <div class="w3-bar w3-blue">
+      <div class="w3-bar w3-blue" style="text-align: center;" align="center">
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="genres.html" class="w3-bar-item w3-button">Genres</a>
         <a href="artists.html" class="w3-bar-item w3-button w3-white">Artists</a>
