--- a/assignments/11-classes/genres.html
+++ b/assignments/11-classes/genres.html
@@ -39,7 +39,8 @@
     </div>
 
     <div class="container2">
-        <div id="gallery" class="w3-padding"></div>
+            <div id="genreContainer" class="w3-padding"></div>
+
     
         <!-- MODAL PLAYER -->
         <div id="songModal" class="w3-modal">
