--- a/assignments/11-classes/artists.html
+++ b/assignments/11-classes/artists.html
@@ -37,7 +37,8 @@
     </div>
     
     <div class="container2">
-        <div id="gallery" class="w3-padding"></div>
+        <div id="artistContainer" class="w3-padding"></div>
+
 
         <!-- MODAL PLAYER -->
         <div id="songModal" class="w3-modal">
