--- a/assignments/11-classes/artists.html
+++ b/assignments/11-classes/artists.html
@@ -70,9 +70,12 @@
             <p class="bottomcredits">&copy; 2026 - Cocky Consulting - CircusFrame Music Player</p>
         </footer>
     </div>
- <script src="./js/a11.js"></script>
-    <script>
+     <script>
+     document.addEventListener("DOMContentLoaded", () => {
         loadJSON(loadArtistGallery);
+    });
+        
+       
     </script>
 
 </body>
