--- a/assignments/11-classes/index.html
+++ b/assignments/11-classes/index.html
@@ -68,10 +68,12 @@
         <p id="bottomcredits">&copy 2026 - Cocky Consulting - CircusFrame Music Player</p>
     </footer>
 </div>
-    <script src="./js/a11.js"></script>
+
     <script>
+    document.addEventListener("DOMContentLoaded", () => {
         loadJSON(loadHomeGallery);
-    </script>
+    });
+</script>
 
 </body>
 </html>
