--- a/assignments/11-classes/genres.html
+++ b/assignments/11-classes/genres.html
@@ -72,10 +72,13 @@
             <p class="bottomcredits">&copy; 2026 - Cocky Consulting - CircusFrame Music Player</p>
         </footer>
     </div>
- <script src="./js/a11.js"></script>
-    <script>
-        loadJSON(loadGenreGallery);
-    </script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+      loadJSON(loadGenreGallery);
+    });
+</script>
+  
 
 </body>
 </html>
