--- a/assignments/11-classes/albums.html
+++ b/assignments/11-classes/albums.html
@@ -72,9 +72,10 @@
             <p class="bottomcredits">&copy; 2026 - Cocky Consulting - CircusFrame Music Player</p>
         </footer>
     </div>
- <script src="./js/a11.js"></script>
-    <script>
-        loadJSON(loadAlbumGallery);
+     <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            loadJSON(loadAlbumGallery);
+        });
     </script>
 
 </body>
