--- a/assignments/11-classes/albums.html
+++ b/assignments/11-classes/albums.html
@@ -25,13 +25,12 @@
 
 <body class="w3-light-grey">
 
-
-
     <header class="w3-container w3-black w3-center">
         <h1>Browse by Album</h1>
     </header>
-        <!-- NAV BAR -->
-        <div class="w3-bar w3-blue" style="text-align: center;" align="center">
+
+    <!-- NAV BAR -->
+    <div class="w3-bar w3-blue" style="text-align: center;" align="center">
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="genres.html" class="w3-bar-item w3-button">Genres</a>
         <a href="artists.html" class="w3-bar-item w3-button">Artists</a>
@@ -39,12 +38,14 @@
     </div>
 
     <div class="container2">
-       <div id="albumContainer" class="w3-padding"></div>
 
+        <!-- ALBUM GALLERY -->
+        <div id="albumContainer" class="w3-padding"></div>
 
         <!-- MODAL PLAYER -->
         <div id="songModal" class="w3-modal">
             <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+                
                 <header class="w3-container w3-blue">
                     <span onclick="closeModal()" class="w3-button w3-display-topright">&times;</span>
                     <h2 id="modalTitle"></h2>
@@ -65,14 +66,18 @@
                 <footer class="w3-container w3-blue w3-center">
                     <p>&copy; 2026 - Cocky Consulting - CircusFrame Music Player</p>
                 </footer>
+
             </div>
         </div>
 
         <footer>
             <p class="bottomcredits">&copy; 2026 - Cocky Consulting - CircusFrame Music Player</p>
         </footer>
+
     </div>
-     <script>
+
+    <!-- CORRECT CALLBACK -->
+    <script>
         document.addEventListener("DOMContentLoaded", () => {
             loadJSON(loadAlbumGallery);
         });
@@ -80,3 +85,4 @@
 
 </body>
 </html>
+
